examples/errors/array_by_value.alan
main(): proc
    foo(x: int[]): proc
    {
    }
{
}